เปลี่ยนแปลงคำสำคัญและแก้คำผิด (v0.66.6#2)

--- a/mod/thmod/localisation/english/overlord_mega_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_mega_l_english.yml
@@ -1,16 +1,16 @@
 ﻿l_english:
  orbital_ring_tier_1_MEGASTRUCTURE_DETAILS:0 "An §Y$orbital_ring_tier_1$§! is a Starbase variant that forms a band encircling the planet, providing defense and additional specialization."
  orbital_ring_tier_1_CONSTRUCTION_INFO_DELAYED:1 "Orbital Rings can provide defensive benefits to the planet, providing a platform for many Starbase Modules and Buildings, as well as Habitation Modules and orbital production facilities."
- orbital_ring_tier_1:0 "สถานีอวกาศวงโคจรระดับสูง"
+ orbital_ring_tier_1:0 "สถานีอวกาศวงแหวนโคจร"
  orbital_ring_tier_1_DESC:1 "This Starbase variant encircles the planet, providing space for Modules, Buildings, and Defense Platforms."
- orbital_ring_tier_1_plural:0 "สถานีอวกาศวงโคจรระดับสูง"
+ orbital_ring_tier_1_plural:0 "สถานีอวกาศวงแหวนโคจร"
  allow_orbital_rings:0 "§Hปลดล็อกสิ่งก่อสร้างขนาดใหญ่:§! $orbital_ring_tier_1$"
- orbital_ring_tier_2:0 "สถานีอวกาศวงโคจรระดับสูง Tier 2"
- orbital_ring_tier_2_plural:0 "สถานีอวกาศวงโคจรระดับสูง Tier 2"
- orbital_ring_tier_3:0 "สถานีอวกาศวงโคจรระดับสูง Tier 3"
- orbital_ring_tier_3_plural:0 "สถานีอวกาศวงโคจรระดับสูง Tier 3"
+ orbital_ring_tier_2:0 "สถานีอวกาศวงแหวนโคจร Tier 2"
+ orbital_ring_tier_2_plural:0 "สถานีอวกาศวงแหวนโคจร Tier 2"
+ orbital_ring_tier_3:0 "สถานีอวกาศวงแหวนโคจร Tier 3"
+ orbital_ring_tier_3_plural:0 "สถานีอวกาศวงแหวนโคจร Tier 3"
  STARBASE_STATION_NAME_FORMAT_NON_PRIMARY:0 "$PLANET$ Station"
- tech_orbital_ring_tier_1:0 "สถานีอวกาศวงโคจรระดับสูง"
+ tech_orbital_ring_tier_1:0 "สถานีอวกาศวงแหวนโคจร"
  tech_orbital_ring_tier_1_desc:0 "Allows the construction of massive, band-shaped starbases in stable orbit around colonized planets."
  requires_technology_orbital_ring_tier_1:0 "$TRIGGER_FAIL$ต้องการเทคโนโลยี £engineering£ §Y$tech_orbital_ring_tier_1$§! "
  CAN_CREATE_ORBITAL_STATION_ALREADY_EXISTS_ORBITAL_DEFENCE:1 "An orbital defense station is already orbiting this $CLASS$"
@@ -74,7 +74,7 @@
  feature_hyper_relay_construction_desc:0 "Constructs a §YHyper Relay§! outside of the gravity well of a system. $hyper_relay_DESC$"
  requires_no_existing_hyper_relay:0 "$TRIGGER_FAIL$Cannot build due to existing $hyper_relay$."
  requires_colonized_planet_orbital_ring:0 "$TRIGGER_FAIL$Cannot build in orbit of planets that are neither colonized nor fully under your control."
- orbital_ring:0 "สถานีอวกาศวงโคจรระดับสูง"
+ orbital_ring:0 "สถานีอวกาศวงแหวนโคจร"
  orbital_ring_DESC:0 "$orbital_ring_tier_1_DESC$"
  orbital_ring_MEGASTRUCTURE_DETAILS:0 "$orbital_ring_tier_1_MEGASTRUCTURE_DETAILS$"
  orbital_ring_ruined:0 "Orbital Ring (พังเสียหาย)"
