--- a/mod/thmod/localisation/english/messages_l_english.yml
+++ b/mod/thmod/localisation/english/messages_l_english.yml
@@ -26,8 +26,8 @@
  MESSAGE_FLEET_ORDER_AUTO_EXPLORE_FALLBACK:0 "§H$FLEET$§! ไม่สามารถเข้าถึงระบบดาวใดๆ ที่ยังไม่ได้สำรวจได้ แต่จะพยายามสำรวจค้นหาระบบเพิ่มเติม"
  FLEET_BUILD_ORDER_CANCELED_MESSAGE_TYPE_TITLE:0 "$AUTO_EXPLORE_CANCELED_MESSAGE_TYPE_TITLE$"
  MESSAGE_FLEET_BUILD_ORDER_CANCELED_MESSAGE:0 "$FLEET|H$ ไม่สามารถสร้าง $STATION|H$ ในระบบดาว $SYSTEM|H$ ได้, รับทรัพยากรคืนแล้ว"
- MESSAGE_BYPASS_EXPLORED:0 "หนอนที่สำรวจแล้ว"
- BYPASS_EXPLORED_MESSAGE:0 "The Wormhole in $SYSTEM1|Y$ has been explored. It connects to the $SYSTEM2|Y$ system."
+ MESSAGE_BYPASS_EXPLORED:0 "รูหนอนที่สำรวจแล้ว"
+ BYPASS_EXPLORED_MESSAGE:0 "รูหนอนในระบบดาว $SYSTEM1|Y$ ได้รับการสำรวจแล้ว มันเชื่อมต่อกับระบบดาว $SYSTEM2|Y$"
  MESSAGE_ESN_ARRIVED_TITLE:0 "นำทางด้วยการทดลองมิติย่อย"
  MESSAGE_ESN_ARRIVED:0 "$FLEET_NAME|Y$ has arrived in the $SYSTEM|Y$ system"
  MESSAGE_ESN_ABORTED_TITLE:0 "การนำทางด้วยการทดลองมิติย่อยถูกยกเลิก"
